# proctoring

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/core/: detection_pipeline.py  risk_scorer.py
backend/app/detectors/: behavior_analyzer.py  gaze_detector.py  object_detector.py
backend/app/preprocessing/: __init__.py  image_preprocessor.py
backend/app/services/: websocket_manager.py
backend/app/utils/: __init__.py  json_utils.py
docs/: ARCHITECTURE.md  ARCHITECTURE_VI.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertPanel.tsx  StatsDashboard.tsx  VideoCapture.tsx
frontend/src/services/: websocket.ts
frontend/src/stores/: proctoringStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: videoUtils.ts
notebooks/: gaussian-blur.ipynb  gaze.ipynb  preprocessing.ipynb  yolo8-nano.ipynb
